--- a/assignment1_project_name/css/styles.css
+++ b/assignment1_project_name/css/styles.css
@@ -5,19 +5,28 @@
 }
 
 h1 {
-
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-h2 {
-
+h2, h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 p {
-
+    max-width: 60%;
+    margin: auto;
 }
 
 a {
     text-decoration: none; /* Remove underlines from navigation bar hyperlinks */
+}
+
+li {
+    text-align: left;
+}
+
+ul {
+    padding-left: 10%;
 }
 
 body {
@@ -39,7 +48,7 @@ nav > a:hover {
     display: grid;
     grid-template-columns: auto auto auto;
     gap: 10px;
-    background-color: dodgerblue;
+    background-color: rgb(22, 109, 197);
     padding: 10px;
 }
 
@@ -50,14 +59,16 @@ nav > a:hover {
     padding: 10px;
 }
 
-.navbar {
-    grid-column: 1 / 4; /* Make navigation bar go from 1st to 3rd column in grid layout */
+.heroSection, .companyTimeline, .missionStatement, .footer, .navbar {
+    grid-column: 1 / 4; /* Make navigation bar and other stuff stretch from 1st to 3rd column in grid layout */
 }
 
-.heroSection {
-    grid-column: 1 / 4;
+.aboutPerson {
+    min-height: 5em;
+    line-height: 1.3;
 }
 
-.footer {
-    grid-column: 1 / 4; /* Make footer go from 1st to 3rd column in grid layout */
+.aboutPerson > img {
+    border-radius: 50%;
+    max-width: 15%;
 }
