--- a/assignment1_project_name/css/styles.css
+++ b/assignment1_project_name/css/styles.css
@@ -4,16 +4,23 @@
     font-family: "Helvetica", "Arial", sans-serif;
 }
 
+html {
+    font-size: 110%;
+}
+
 h1 {
+    font-size: 2.5rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h2, h3 {
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 p {
-    max-width: 60%;
+    font-size: 1.5rem;
+    max-width: 80%;
     margin: auto;
 }
 
@@ -34,29 +41,34 @@ body {
 }
 
 nav > a {
-    padding: 10px;
+    font-size: 1.5rem;
+    padding: 0.625%;
     background-color: rgb(0, 0, 0);
-    transition: 0.2s;
+    transition: 0.5s;
     color: white;
+    margin-right: 0.25rem;
 }
 
 nav > a:hover {
-    background-color: rgb(84, 84, 84);
+    background-color: rgb(32, 54, 250);
+    color: white;
+    border-radius: 0.25rem;
 }
+
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap: 10px;
-    background-color: rgb(22, 109, 197);
-    padding: 10px;
+    gap: 1rem;
+    background-color: rgb(89, 168, 247);
+    padding: 1rem;
 }
 
 /* Styling for grid cells */
 .grid-container > div {
     background-color: rgb(228, 228, 228);
     text-align: center;
-    padding: 10px;
+    padding: 0.65rem;
 }
 
 .heroSection, .companyTimeline, .missionStatement, .footer, .navbar {
