--- a/assignment1_project_name/css/styles.css
+++ b/assignment1_project_name/css/styles.css
@@ -71,7 +71,7 @@ nav > a:hover {
     padding: 0.65rem;
 }
 
-.heroSection, .companyTimeline, .missionStatement, .footer, .navbar {
+.heroSection, .companyTimeline, .missionStatement, .footer, .navbar, .servicesSection {
     grid-column: 1 / 4; /* Make navigation bar and other stuff stretch from 1st to 3rd column in grid layout */
 }
 
