--- a/assignment1_project_name/css/styles.css
+++ b/assignment1_project_name/css/styles.css
@@ -42,7 +42,7 @@ body {
 
 nav > a {
     font-size: 1.5rem;
-    padding: 0.625%;
+    padding: 0.2em;
     background-color: rgb(0, 0, 0);
     transition: 0.5s;
     color: white;
@@ -55,18 +55,47 @@ nav > a:hover {
     border-radius: 0.25rem;
 }
 
+.navleft {
+    float: left;
+}
+
+.navright {
+    float: right;
+}
+
+/* Call to action button */
+.cta-button {
+    background-color: rgba(255, 0, 64, 0.596);
+    padding: 0.4em;
+    border-radius: 5px;
+    transition-duration: 0.2s;
+}
+
+#loginIcon {
+    filter: invert(100%); 
+    max-height: 2vh;
+}
+
+.cta-button:hover {
+    background-color: rgba(233, 126, 255, 0.356);
+}
 
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap: 1rem;
-    background-color: rgb(89, 168, 247);
-    padding: 1rem;
+    gap: 0.2em;
+    background-color: rgb(226, 128, 0);
+    padding: 0.2em;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* Styling for grid cells */
 .grid-container > div {
-    background-color: rgb(228, 228, 228);
+    background-color: rgb(255, 255, 255);
+    border-bottom: 2px solid rgb(53, 34, 0);
+    border-right: 2px solid rgb(53, 34, 0);
+    border-radius: 3px;
     text-align: center;
     padding: 0.65rem;
 }
@@ -75,13 +104,38 @@ nav > a:hover {
     grid-column: 1 / 4; /* Make navigation bar and other stuff stretch from 1st to 3rd column in grid layout */
 }
 
-@media only screen and (max-width: 600px) {
-    .grid-container {
+.grid-container > .navbar {
+    background-color: black;
+}
+
+#heroImage {
+    max-width: 50%;
+    box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.contactForm, .contactDetails {
+    grid-column: 1 / 4;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 0.2em;
+}
+
+@media only screen and (max-width: 800px) {
+    .grid-container, nav > a {
         display: flex;
         flex-direction: column;
     }
+    nav {
+        text-align: center;
+    }
 
+    .navleft, .navright {
+        float: none;
+    }
 
+    #loginIcon {
+        display: none;
+    }
 }
 
 .aboutPerson {
