--- a/assignment1_project_name/css/styles.css
+++ b/assignment1_project_name/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 html {
-    font-size: 110%;
+    font-size: 100%;
 }
 
 h1 {
@@ -37,7 +37,7 @@ ul {
 }
 
 body {
-    background-color: black;
+    background-color: rgb(129, 20, 20);
 }
 
 nav > a {
@@ -65,15 +65,26 @@ nav > a:hover {
 
 /* Call to action button */
 .cta-button {
-    background-color: rgba(255, 0, 64, 0.596);
+    background-color: rgba(255, 0, 64, 0.474);
     padding: 0.4em;
     border-radius: 5px;
     transition-duration: 0.2s;
 }
 
+#darkmodeicon {
+    width: 100%;
+    height: 40px;
+}
+
+#darkmodebutton {
+    background-color: transparent;
+    border-style:none;
+    filter: invert();
+}
+
 #loginIcon {
     filter: invert(100%); 
-    max-height: 2vh;
+    height: 20px;
 }
 
 .cta-button:hover {
@@ -100,8 +111,16 @@ nav > a:hover {
     padding: 0.65rem;
 }
 
-.heroSection, .companyTimeline, .missionStatement, .footer, .navbar, .servicesSection {
+.heroSection, .companyTimeline, .missionStatement, .footer, .navbar, .servicesSection, .filter-section {
     grid-column: 1 / 4; /* Make navigation bar and other stuff stretch from 1st to 3rd column in grid layout */
+}   
+
+.featuredSection {
+    grid-column: 1 / 3;
+}
+
+.navbar > a, .navright > a {
+    text-decoration: none;
 }
 
 .grid-container > .navbar {
@@ -120,8 +139,8 @@ nav > a:hover {
     margin-top: 0.2em;
 }
 
-@media only screen and (max-width: 800px) {
-    .grid-container, nav > a {
+@media only screen and (max-width: 768px) {
+    .grid-container, #navbarCollapsible, nav > a {
         display: flex;
         flex-direction: column;
     }
@@ -146,4 +165,8 @@ nav > a:hover {
 .aboutPerson > img {
     border-radius: 50%;
     max-width: 15%;
+}
+
+.darkMode {
+    background-color: black;
 }
